fix: mudando a stream do método findById