@@ -7,9 +7,7 @@ import com.projetoBackEndNelio.projetoIntensivaoNelio.repositories.GameListRepos
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class GameListService {
@@ -22,6 +20,6 @@ public class GameListService {
     @Transactional(readOnly = true)
     public List<GameListDTO> findAll(){
         List<GameList> gameLists = gameListRepository.findAll();
-        return gameLists.stream().map(gameList -> new GameListDTO(gameList)).collect(Collectors.toList());
+        return gameLists.stream().map(gameList -> new GameListDTO(gameList)).toList();
     }
 }
